# rust_test

./: Cargo.toml  README.md
.github/workflows/: github-actions-demo.yml
src/: main.rs  schema.rs
