[package]
name = "rust_test"
version = "0.1.0"
authors = ["Render Developers <dev@render.com>"]
edition = "2021"


[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper.git" , default-features = true, features = ["expose-test-schema", "serde_json"]}
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git" }
# rocket = "0.4.10"
rocket = { version = "0.5.0-rc.1", default-features = false }
